[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Shaurya Sharma <shaur141@gmail.com>"]


[[bin]]
name = "day1"
path = "src/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/day4/day4.rs"


[dependencies]
chrono = "0.4.6"
